--- a/app/src/main/res/layout/create_item.xml
+++ b/app/src/main/res/layout/create_item.xml
@@ -55,11 +55,20 @@
         android:backgroundTint="@color/white"
         android:textColorHint="@color/white"/>
 
+    <Spinner
+        android:id="@+id/et_spinner"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/et_z_coord"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/white" />
+
     <EditText
         android:id="@+id/et_description"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/et_z_coord"
+        android:layout_below="@+id/et_spinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:hint="Omschrijving (optioneel)"
