--- a/app/src/main/res/layout/display_item.xml
+++ b/app/src/main/res/layout/display_item.xml
@@ -21,7 +21,7 @@
         android:layout_below="@id/display_title"
         android:layout_centerHorizontal="true"
         android:hint="X coordinaat"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:textSize="20sp"
         android:textColor="@color/white"/>
     <TextView
@@ -47,13 +47,24 @@
         android:textColor="@color/white"/>
 
     <TextView
+        android:id="@+id/display_world"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/display_z"
+        android:layout_marginTop="50dp"
+        android:hint="Wereld"
+        android:textSize="24sp"
+        android:textColor="@color/white"/>
+
+    <TextView
         android:id="@+id/display_description"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/display_z"
-        android:layout_marginTop="100dp"
-        android:hint="description"
+        android:layout_below="@id/display_world"
+        android:layout_marginTop="50dp"
+        android:hint=""
         android:textSize="18sp"
         android:textColor="@color/white"/>
 
