--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:id="@+id/rel_list_item">
 
     <TextView
         android:id="@+id/tv_list_item"
