--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
     <color name="color_nether">#800000</color>
     <color name="color_end">#808080</color>
 </resources>
